<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash">

    <TextView
        android:id="@+id/txt_title"
        style="@style/TextViewStyle.Splash"
        android:layout_marginTop="@dimen/margin_top_splash_title"
        android:text="@string/splash_title"
        android:textSize="@dimen/text_size_xlarge" />

    <TextView
        android:id="@+id/txt_desc"
        style="@style/TextViewStyle.Splash"
        android:layout_below="@id/txt_title"
        android:text="@string/splash_description" />

    <Button
        android:id="@+id/btn_log_in"
        style="@style/ButtonStyle.Splash"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/all_log_in" />

    <Button
        android:id="@+id/btn_sign_up"
        style="@style/ButtonStyle.Splash"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/all_sign_up" />

    <include
        android:id="@+id/layout_log_in"
        layout="@layout/form_log_in"
        android:visibility="gone" />

    <include
        android:id="@+id/layout_register"
        layout="@layout/form_register"
        android:visibility="gone" />
</RelativeLayout>